@@ -6,11 +6,11 @@
 # Required-Stop:
 # Default-Start:     S
 # Default-Stop:
+# Short-Description: check for deprecated kernel versions
+# Description:       This script detects deprecated kernel versions incompatible with
+#                    the current version of the glibc
 ### END INIT INFO
 #
-# 
-# This script detects deprecated kernel versions incompatible with
-# the current version of the glibc
 
 # glibc kernel version check: KERNEL_VERSION_CHECK
 
