@@ -45,6 +45,8 @@ glibc (2.9-0exp1) UNRELEASED; urgency=low
   * testsuite-checking/compare.sh: don't assume expected and current 
     testsuite results in same order.  Closes: bug#504031.
   * testsuite-checking/expected-results-powerpc64-linux-ppc64: update.
+  * debian/local/etc_init.d/glibc.sh: add Description and Short-Description.
+    Closes: bug#510083.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 07 Jan 2009 08:51:40 +0100
 
